--- a/bk-api-medicina/.env
+++ b/bk-api-medicina/.env
@@ -1,4 +1,4 @@
 PORT = 4000
-MONGO_URI = mongodb+srv://admin:admin123456@cluster0.72meq9c.mongodb.net/test
+MONGO_URI = mongodb+srv://admin:admin123456@cluster0.72meq9c.mongodb.net/bd_medicina
 JWT_SECRET = palabraSecreta
 FRONTEND_URL = http://localhost:3000
